force-app/main/default/objects/Expense_Report__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD (US$)</fullName>
                <default>true</default>
                <label>USD (US$)</label>
            </value>
            <value>
                <fullName>EUR (€)</fullName>
            </value>
            <value>
                <fullName>JPY (¥)</fullName>
            </value>
            <value>
                <fullName>GBP (£)</fullName>
            </value>
            <value>
                <fullName>AUD (A$)</fullName>
            </value>
            <value>
                <fullName>CAD (C$)</fullName>
            </value>
            <value>
                <fullName>CHF (Fr)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>