force-app/main/default/objects/Expense_Report__c/listViews/All_Expense-reports.listView-meta.xml
<ListView>
    <fullName>All_Expense_reports</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Expense reports</label>
</ListView>