force-app/main/default/objects/Expense_Report__c/listViews/My_New_Expense_Reports.listView-meta.xml
<ListView>
    <fullName>My_New_Expense_Reports</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>My New Expense Reports</label>
</ListView>